--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <title>MIT Mysore</title>
     </head>
     <body>
-        <h1>HEllo MIT Mysore</h1>    
+        <h1 style='color:red;">HEllo MIT Mysore</h1>    
     </body>
-    </html>
+</html>
